--- a/doc/proposal/references.bib
+++ b/doc/proposal/references.bib
@@ -241,6 +241,13 @@ series = {CASCON '14}
   url =          "https://www.gharchive.org/"
 }
 
+@online{gh-api,
+  author =       "GitHub Inc.",
+  year =         "2022",
+  title =        "GitHub REST API - GitHub Docs",
+  url =          "https://docs.github.com/en/rest"
+}
+
 @online{bq-gh,
   author =       "Google",
   year =         "2015",
