Rename docs and add the slides and video

--- a/doc/proposal/team081proposal.tex
+++ b/doc/proposal/team081proposal.tex
@@ -336,7 +336,7 @@ but these can be parallelized.
 Table~\ref{tab:pow} summarizes the plan of work
 % TODO: If we have more space ad items here
 \begin{table}
-  \caption{Plan of Work in high level, all work will be evenly distributed}
+  \caption{Plan of Work in high level}
   \label{tab:pow}
   \begin{tabular}{cccl}
     \toprule
@@ -350,6 +350,8 @@ Table~\ref{tab:pow} summarizes the plan of work
     Web and UI              & Ran               & Nov 1   & 4 weeks\\
     Progress report         & All               & TBD     & 1 week \\
     Final report            & All               & TBD     & 2 weeks \\
+    \hline
+    \multicolumn{4}{c} *All team members contribute a similar amount of effort \\
   \bottomrule
 \end{tabular}
 \end{table}
